--- a/sass/_media-queries.scss
+++ b/sass/_media-queries.scss
@@ -10,28 +10,28 @@
 
 @media (min-width:700px){
   .fact-container{
-    width: 49%;
-    margin: 0 2% 30px 0;
+    width: 48%;
+    margin: 0 1% 30px;
+  }
 
-    &:nth-child(2n){
-      margin-right: 0;
-    }
+  .facts-list hr:nth-child(4n){
+    width: 100%;
   }
 }
 
 @media (min-width:880px){
   .fact-container{
-    width: 32%;
-    margin: 0 2% 30px 0;
+    width: 31.33333%;
+    margin: 0 1% 30px;
+  }
 
-    &:nth-child(2n){
-      margin-right: 2%;
-    }
+  .facts-list hr:nth-child(4n){
+    width: 0;
+  }
 
-    &:nth-child(3n){
-      margin-right: 0%;
-    }
-  } 
+  .facts-list hr:nth-child(6n){
+    width: 100%;
+  }
 }
 
 @media (min-width:1200px){
